--- a/src/views/wallet/addbank.ejs
+++ b/src/views/wallet/addbank.ejs
@@ -67,9 +67,9 @@
                         </div>
                     </div>
                     <div data-v-7aa0f84a="" class="item">
-                        <div data-v-7aa0f84a="" class="lab">Chi nhánh</div>
+                        <div data-v-7aa0f84a="" class="lab">Chi nhánh trực thuộc</div>
                         <div data-v-7aa0f84a="" class="input">
-                            <input data-v-7aa0f84a="" maxlength="10" type="text" placeholder="Chi nhánh" class="ipt" />
+                            <input data-v-7aa0f84a="" maxlength="10" type="text" placeholder="Chi nhánh trực thuộc" class="ipt" />
                         </div>
                     </div>
                     <!---->
